[gd_scene load_steps=11 format=3 uid="uid://bnukldbqo3wmj"]

[ext_resource type="Script" uid="uid://b1al56xdlbe3t" path="res://application.gd" id="1_3k2th"]
[ext_resource type="Texture2D" uid="uid://b40kbp4kk58lo" path="res://蒸腾青年 logo初稿头像.png" id="2_qymcc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3k2th"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qymcc"]
bg_color = Color(0.345, 0.46, 0.383333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3k2th"]
bg_color = Color(0.502276, 0.636807, 0.572237, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_qymcc"]
Button/font_sizes/font_size = 40
Button/styles/focus = SubResource("StyleBoxEmpty_3k2th")
Button/styles/hover_pressed = null
Button/styles/normal = SubResource("StyleBoxFlat_qymcc")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_3k2th")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0dfcy"]
bg_color = Color(0.405838, 0.679807, 0.364302, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.512246, 0.912138, 0.473083, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_u648w"]
Button/styles/normal = SubResource("StyleBoxFlat_0dfcy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdbbs"]
bg_color = Color(0.394101, 0.659657, 0.603876, 1)

[sub_resource type="Theme" id="Theme_ipnkv"]
Button/styles/normal = SubResource("StyleBoxFlat_jdbbs")

[node name="Application" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qymcc")
script = ExtResource("1_3k2th")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label_result" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Label_currentnum" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
columns = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button8" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button9" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button10" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="delete" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Delete"

[node name="Clear" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Clear"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttondivide" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_u648w")
text = "/"

[node name="Buttonmul" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_u648w")
text = "*"

[node name="Buttonadd" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_u648w")
text = "+"

[node name="Buttonmin" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_u648w")
text = "-"

[node name="Buttonequal" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_ipnkv")
text = "="

[node name="蒸腾青年Logo初稿头像" type="Sprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
position = Vector2(-452.375, -194.5)
scale = Vector2(0.0442568, 0.0423913)
texture = ExtResource("2_qymcc")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button" to="." method="_on_0_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Button10" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Buttondivide" to="." method="_on_buttondivide_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Buttonmul" to="." method="_on_buttonmul_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Buttonadd" to="." method="_on_buttonadd_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Buttonmin" to="." method="_on_buttonmin_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Buttonequal" to="." method="_on_buttonequal_pressed"]
